--- a/index.html
+++ b/index.html
@@ -2,8 +2,28 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <link rel='icon' type='image/svg+xml' href='/vite.svg' />
+    <link rel='icon' href='/favicon.ico' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta
+      name="description"
+      content="Meghan Bucher is a software engineer based in the San Francisco Bay Area."
+    />
+    <meta
+      name="keywords"
+      content="Meghan Bucher, Meghan Bucher Portfolio, Software Engineer, Front End Developer, Full Stack Developer, Web Developer, Mobile Developer, React Developer"
+    />
+    <meta property="og:title" content="Meghan Bucher" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://i.imgur.com/D9WR6fo.png" />
+    <meta property="og:url" content="https://https://meghanbucher.work/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="meghanbucher.work" />
+    <meta property="twitter:url" content="https://meghanbucher.work/" />
+    <meta name="twitter:title" content="Meghan Bucher" />
+    <meta
+      name="twitter:description"
+      content="Meghan Bucher is a software engineer based in the San Francisco Bay Area."
+    />
     <title>Meghan Bucher</title>
   </head>
   <body>
