Update meta image.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta property="og:title" content="Meghan Bucher" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://i.imgur.com/D9WR6fo.png" />
+    <meta property="og:image" content="https://i.imgur.com/Pa4tVlR.png" />
     <meta property="og:url" content="https://https://meghanbucher.work/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="meghanbucher.work" />
